<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="reason">Reason:</string>
    <string name="reviewed_by">Reviwed by:</string>
    <string name="business_days">bd</string>
    <string name="end_date">end_date</string>
    <string name="start_date">start_date</string>
    <string name="status">STATUS</string>
    <string name="dashboard">Dashboard</string>
    <string name="team">Team</string>
</resources>