<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView android:id="@+id/status"
              android:layout_width="wrap_content"
              android:text="@string/status"
              android:textSize="18sp"
              android:textColor="@color/peter_river"
              android:layout_height="wrap_content"/>
    <TextView android:id="@+id/start_date"
              android:textSize="18sp"
              android:text="@string/start_date"
              android:textColor="@color/concrete"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/status"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>
    <TextView android:id="@+id/end_date"
              android:layout_width="wrap_content"
              android:text="@string/end_date"
              android:layout_height="wrap_content"
              android:textColor="@color/concrete"
              android:textSize="18sp"
              android:layout_alignTop="@+id/start_date"
              android:layout_toRightOf="@+id/start_date"
              android:layout_toEndOf="@+id/start_date"/>
    <TextView android:id="@+id/business_days"
              android:layout_width="wrap_content"
              android:text="@string/business_days"
              android:textColor="@color/concrete"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:layout_alignTop="@+id/end_date"
              android:layout_toRightOf="@+id/end_date"
              android:layout_toEndOf="@+id/end_date"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reviewed_by"
            android:textColor="@color/concrete"
            android:id="@+id/reviewed_by" android:layout_below="@+id/start_date" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reason"
            android:textColor="@color/concrete"
            android:id="@+id/reason" android:layout_below="@+id/reviewed_by" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
</RelativeLayout>